--- a/content/publication/traffic simulation/cite.bib
+++ b/content/publication/traffic simulation/cite.bib
@@ -1,6 +1,6 @@
 @INPROCEEDINGS{LASIL,
   author={Guo, Ke and Miao, Zhenwei and Jing, Wei and Liu, Weiwei and Li, Weizi and Hao, Dayang and Pan, Jia},
-  booktitle={2024 IEEE/CVF Conference on Computer Vision and Pattern Recognition (Under Review)},
+  booktitle={IEEE/CVF Conference on Computer Vision and Pattern Recognition (Under Review)},
   title={LASIL: Learner-Aware Supervised Imitation Learning For Long-term Microscopic Traffic Simulation},
   year={2024},
  }
